# ndl

./: .gitignore  pyproject.toml  readme.md  training.sh
notebooks/: analyse_test_videos.ipynb  benchmarking.ipynb  benchmarking_post.ipynb  create_embeddings_files.ipynb  inference_context.ipynb  label_acquisition.ipynb  load_datasets.ipynb  merge_jsons.ipynb  post_processing.ipynb  sliding_window.ipynb  tableau_papier.ipynb  train_simple_model.ipynb
processing/: cnn.py  parse_labels.py  precompute_embeddings.py  precompute_embeddings_test_set.py
src/navi/datasets/: frames_embeddings.py  seq2seq_embeddings.py  seq2seq_embeddings_full.py  seq2seq_images.py  single_video.py  single_video_with_context.py  video_with_context.py
src/navi/inference/: run_inf.py  run_inf_nnunet.py  run_inf_pierre.py  run_inf_single_frame.py
src/navi/nn/: embeddings_fc.py  models_using_embeddings.py
src/navi/sampler/: imbalance_sampler.py
src/navi/scripts/: train_rnn.py  train_rnn_with_embeddings.py
src/navi/trainers/: seq2seq.py
src/navi/transforms/: to_tensor.py
src/navi/utils/: utils.py
