[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndl"
version = "1.0.0"
authors = [
  { name="Robin GHYSELINCK", email="robin.ghyselinck@unamur.be" },
]
description = "Private repo for Navi Deep Learning Project."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "wandb",
    "torch",
    "torchvision",
    "scikit-learn",
    "seaborn",
    "tqdm"
]
